--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -14,6 +14,7 @@
     "from torch.utils.data import DataLoader, Dataset\n",
     "import torch.nn.functional as F\n",
     "from PIL import Image\n",
+    "from torch.optim.lr_scheduler import ReduceLROnPlateau\n",
     "import os\n",
     "\n",
     "# Custom Dataset to load images and labels from filenames\n",
@@ -38,15 +39,17 @@
     "\n",
     "        return img, label\n",
     "\n",
+    "IMAGE_SIZE=(32,32)\n",
+    "\n",
     "# Define transformations for training and testing\n",
     "train_transforms = transforms.Compose([\n",
-    "    transforms.Resize((512,512)), #transforms.Resize((256,256)),  # Resize images to a fixed size\n",
+    "    transforms.Resize(IMAGE_SIZE), #transforms.Resize((256,256)),  # Resize images to a fixed size\n",
     "    transforms.ToTensor(),  # Convert images to tensors\n",
     "    transforms.Normalize(mean=[0.5, 0.5, 0.5], std=[0.5, 0.5, 0.5])  # Normalize the images\n",
     "])\n",
     "\n",
     "test_transforms = transforms.Compose([\n",
-    "    transforms.Resize((512,512)),\n",
+    "    transforms.Resize(IMAGE_SIZE),\n",
     "    transforms.ToTensor(),\n",
     "    transforms.Normalize(mean=[0.5, 0.5, 0.5], std=[0.5, 0.5, 0.5])\n",
     "])\n",
@@ -64,8 +67,8 @@
     "train_data = CustomImageDataset(directory='data/processed/train', transform=train_transforms)\n",
     "test_data = CustomImageDataset(directory='data/processed/test', transform=test_transforms)\n",
     "\n",
-    "train_loader = DataLoader(train_data, batch_size=32, shuffle=True)\n",
-    "test_loader = DataLoader(test_data, batch_size=32, shuffle=False)\n",
+    "train_loader = DataLoader(train_data, batch_size=100, shuffle=True)\n",
+    "test_loader = DataLoader(test_data, batch_size=100, shuffle=False)\n",
     "\n"
    ]
   },
@@ -81,27 +84,27 @@
     "import torch.nn.functional as F\n",
     "\n",
     "class AIImageClassifier(nn.Module):\n",
-    "    def __init__(self):\n",
+    "    def __init__(self, IMAGE_SIZE):\n",
     "        super(AIImageClassifier, self).__init__()\n",
-    "        self.input_size = (512,512)\n",
+    "        self.input_size = IMAGE_SIZE\n",
     "        # First convolutional block\n",
-    "        self.conv1 = nn.Conv2d(3, 32, kernel_size=3, padding=1)  # Input: 3xHxW, Output: 32xHxW\n",
+    "        self.conv1 = nn.Conv2d(3, 32, kernel_size=5, padding=1, stride=2)  # Input: 3xHxW, Output: 32xHxW\n",
     "        self.bn1 = nn.BatchNorm2d(32)\n",
     "#        self.pool1 = nn.MaxPool2d(2, 2)  # Downsample: HxW -> H/2 x W/2\n",
     "\n",
     "        # Second convolutional block\n",
-    "        self.conv2 = nn.Conv2d(32, 64, kernel_size=3, padding=1)  # Output: 64xH/2xW/2\n",
+    "        self.conv2 = nn.Conv2d(32, 64, kernel_size=5, padding=1, stride=1)  # Output: 64xH/2xW/2\n",
     "        self.bn2 = nn.BatchNorm2d(64)\n",
-    "        self.pool2 = nn.MaxPool2d(4, 4)  # Downsample: H/2xW/2 -> H/4xW/4\n",
+    "        # self.pool2 = nn.MaxPool2d(2, 2)  # Downsample: H/2xW/2 -> H/4xW/4\n",
     "\n",
     "        # Third convolutional block\n",
-    "        self.conv3 = nn.Conv2d(64, 128, kernel_size=3, padding=1)  # Output: 128xH/4xW/4\n",
+    "        self.conv3 = nn.Conv2d(64, 128, kernel_size=5, padding=1, stride=1)  # Output: 128xH/4xW/4\n",
     "        self.bn3 = nn.BatchNorm2d(128)\n",
-    "        self.pool3 = nn.MaxPool2d(4, 4)  # Downsample: H/4xW/4 -> H/8xW/8\n",
+    "        self.pool3 = nn.MaxPool2d(2, 2)  # Downsample: H/4xW/4 -> H/8xW/8\n",
     "\n",
     "        # Fourth convolutional block\n",
-    "        # self.conv4 = nn.Conv2d(128, 256, kernel_size=3, padding=1)  # Output: 256xH/8xW/8\n",
-    "        # self.bn4 = nn.BatchNorm2d(256)\n",
+    "        self.conv4 = nn.Conv2d(128, 256, kernel_size=3, padding=1, stride=1)  # Output: 256xH/8xW/8\n",
+    "        self.bn4 = nn.BatchNorm2d(256)\n",
     "        # self.pool4 = nn.MaxPool2d(2, 2)  # Downsample: H/8xW/8 -> H/16xW/16\n",
     "\n",
     "        # Calculate the flattened size after convolutions\n",
@@ -117,23 +120,23 @@
     "    def _compute_flattened_size(self, input_size):\n",
     "        \"\"\"Compute the size of the tensor after all convolutional and pooling layers.\"\"\"\n",
     "        x = torch.zeros(1, 3, *input_size)\n",
-    "        #print(f\"Initial size: {x.size()}\")\n",
+    "        # print(f\"Initial size: {x.size()}\")\n",
     "        x = F.relu(self.bn1(self.conv1(x)))\n",
-    "        #print(f\"After pool1: {x.size()}\")\n",
-    "        x = self.pool2(F.relu(self.bn2(self.conv2(x))))\n",
-    "        #print(f\"After pool2: {x.size()}\")\n",
+    "        # print(f\"After pool1: {x.size()}\")\n",
+    "        x = F.relu(self.bn2(self.conv2(x)))\n",
+    "        # print(f\"After pool2: {x.size()}\")\n",
     "        x = self.pool3(F.relu(self.bn3(self.conv3(x))))\n",
-    "        #print(f\"After pool3: {x.size()}\")\n",
-    "        # x = self.pool4(F.relu(self.bn4(self.conv4(x))))\n",
-    "        # #print(f\"After pool4: {x.size()}\")\n",
+    "        # print(f\"After pool3: {x.size()}\")\n",
+    "        x = F.relu(self.bn4(self.conv4(x)))\n",
+    "        # print(f\"After pool4: {x.size()}\")\n",
     "        return x.numel()\n",
     "\n",
     "    def forward(self, x):\n",
     "        # Convolutional layers\n",
     "        x = F.relu(self.bn1(self.conv1(x)))\n",
-    "        x = self.pool2(F.relu(self.bn2(self.conv2(x))))\n",
+    "        x = F.relu(self.bn2(self.conv2(x)))\n",
     "        x = self.pool3(F.relu(self.bn3(self.conv3(x))))\n",
-    "        # x = self.pool4(F.relu(self.bn4(self.conv4(x))))\n",
+    "        x = F.relu(self.bn4(self.conv4(x)))\n",
     "\n",
     "        # Flatten the output for the fully connected layers\n",
     "        x = x.view(x.size(0), -1)\n",
@@ -188,12 +191,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
-      "Epoch 1/5, Loss: 1705.2456572532653\n",
-      "Epoch 2/5, Loss: 14.530432891845702\n",
-      "Epoch 3/5, Loss: 2.54506476521492\n",
-      "Epoch 4/5, Loss: 1.4967406451702119\n",
-      "Epoch 5/5, Loss: 0.7806993722915649\n"
+      "True\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\User\\anaconda3\\envs\\ADL\\lib\\site-packages\\torch\\optim\\lr_scheduler.py:62: UserWarning: The verbose parameter is deprecated. Please use get_last_lr() to access the learning rate.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20, Loss: 1.0706570463048086\n",
+      "Epoch 2/20, Loss: 0.649118051595158\n",
+      "Epoch 3/20, Loss: 0.5806603978905412\n",
+      "Epoch 4/20, Loss: 0.521031071162886\n",
+      "Epoch 5/20, Loss: 0.47324126867784394\n",
+      "Epoch 6/20, Loss: 0.4309497651954492\n",
+      "Epoch 7/20, Loss: 0.38588371955686146\n",
+      "Epoch 8/20, Loss: 0.33869857270684506\n",
+      "Epoch 9/20, Loss: 0.2954986109915707\n",
+      "Epoch 10/20, Loss: 0.2588983635521597\n",
+      "Epoch 11/20, Loss: 0.22013150747451518\n",
+      "Epoch 12/20, Loss: 0.18310284920864636\n",
+      "Epoch 13/20, Loss: 0.161125752557483\n",
+      "Epoch 14/20, Loss: 0.13578896450603173\n",
+      "Epoch 15/20, Loss: 0.10983207067474723\n",
+      "Epoch 16/20, Loss: 0.10124674555328157\n",
+      "Epoch 17/20, Loss: 0.08180626878618366\n",
+      "Epoch 18/20, Loss: 0.07164456927114063\n",
+      "Epoch 19/20, Loss: 0.06571942081597323\n",
+      "Epoch 20/20, Loss: 0.06158993412520633\n"
      ]
     }
    ],
@@ -203,18 +235,21 @@
     "\n",
     "\n",
     "# Initialize the model, loss function, and optimizer\n",
-    "model = AIImageClassifier().to(device)\n",
+    "model = AIImageClassifier(IMAGE_SIZE).to(device)\n",
     "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = optim.Adam(model.parameters(), lr=0.02)\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.01)\n",
+    "scheduler = ReduceLROnPlateau(optimizer, mode='min', factor=0.1, patience=2, verbose=True)\n",
     "\n",
     "# Train the model\n",
-    "num_epochs = 5\n",
+    "num_epochs = 20\n",
     "for epoch in range(num_epochs):\n",
     "    model.train()\n",
     "    running_loss = 0.0\n",
+    "    batches=0\n",
     "    for inputs, labels in train_loader:\n",
     "        inputs, labels = inputs.to(device), labels.to(device)\n",
-    "        \n",
+    "        print(f\"Batches: {batches}\", end=\"\\r\")\n",
+    "        batches+=1\n",
     "        optimizer.zero_grad()\n",
     "        outputs = model(inputs)\n",
     "        loss = criterion(outputs, labels)\n",
@@ -227,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "046db8b1-57a2-447f-939e-5376a01c27d3",
    "metadata": {},
    "outputs": [
@@ -235,7 +270,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 51.088201603665524%\n"
+      "Test Accuracy: 86.25%\n"
      ]
     }
    ],
