--- a/archive/Neural Network 128.ipynb
+++ b/archive/Neural Network 128.ipynb
@@ -70,18 +70,7 @@
    "execution_count": 3,
    "id": "f692af73-4581-40b2-a3ca-210849db7ee4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([3, 128, 128])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_data = CustomImageDataset(directory='data/processed/128/train/rgb')\n",
     "test_data = CustomImageDataset(directory='data/processed/128/valid/rgb')\n",
@@ -174,7 +163,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total size: 0.00 GB\n"
+      "Total GPU memory: 8.00 GB\n",
+      "Allocated GPU memory: 0.00 GB\n",
+      "Reserved GPU memory: 0.00 GB\n"
      ]
     }
    ],
@@ -289,16 +280,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10, Loss: 1.217618040786767\n",
-      "Epoch 2/10, Loss: 0.547359714226693\n",
-      "Epoch 3/10, Loss: 0.4577990864744838\n",
-      "Epoch 4/10, Loss: 0.3447622201457527\n",
-      "Epoch 5/10, Loss: 0.24982767223571398\n",
-      "Epoch 6/10, Loss: 0.18668781905811024\n",
-      "Epoch 7/10, Loss: 0.1430894160955589\n",
-      "Epoch 8/10, Loss: 0.10728967907080739\n",
-      "Epoch 9/10, Loss: 0.08359501800089149\n",
-      "Epoch 10/10, Loss: 0.06617063089557317\n"
+      "Epoch 1/10, Loss: 1.218933698183261\n",
+      "Epoch 2/10, Loss: 0.6077754493825924\n",
+      "Epoch 3/10, Loss: 0.5618816399426194\n",
+      "Epoch 4/10, Loss: 0.4600846076974217\n",
+      "Epoch 5/10, Loss: 0.3711917304104159\n",
+      "Epoch 6/10, Loss: 0.3012262231074505\n",
+      "Epoch 7/10, Loss: 0.2190191637470115\n",
+      "Epoch 8/10, Loss: 0.1707112314353078\n",
+      "Epoch 9/10, Loss: 0.13149865318714463\n",
+      "Epoch 10/10, Loss: 0.10440620145997646\n"
      ]
     }
    ],
@@ -316,7 +307,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 95.75642948759756%\n"
+      "Test Accuracy: 94.88249744559664%\n"
      ]
     }
    ],
