--- a/archive/Preprocess.ipynb
+++ b/archive/Preprocess.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "d8f33831-cf5e-46c1-9cee-669f2c632c52",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
     "import random\n",
     "from glob import glob\n",
     "import numpy as np\n",
-    "import cv2\n"
+    "import cv2"
    ]
   },
   {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "b5c66aac-0a2c-42c5-a846-52a9e3238ba7",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
     "val_ratio = 0.2\n",
     "random.seed(12347556)\n",
     "\n",
-    "AUG_AMOUNT=0\n",
+    "AUG_AMOUNT=0 #the amount of augmented version of each pictures. Turned of because of the overwhelming amount of pictures existing already\n",
     "BATCH_SIZE = 1000"
    ]
   },
@@ -84,13 +84,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "1418f296-507a-44fd-9952-6d1123d8a5b9",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Here we delete the whole \n",
+    "\n",
     "if os.path.exists(PROCESSED_DIR):\n",
-    "        shutil.rmtree(PROCESSED_DIR )"
+    "         shutil.rmtree(PROCESSED_DIR )"
    ]
   },
   {
@@ -119,12 +121,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "ec525a5f-7c9b-4500-ab14-d8751564d310",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_images(label, size):\n",
+    "def process_label(label, size):\n",
     "    print(f\"Working on {label}\")\n",
     "    raw_path = os.path.join(RAW_DIR, label)\n",
     "    processed_path = PROCESSED_DIR\n",
@@ -146,13 +148,13 @@
     "\n",
     "    create_images(val_paths, \"valid\", size, label)\n",
     "\n",
-    "    # create_test(test_paths, \"test\", size, label)\n",
+    "    create_test(test_paths, \"test\", size, label)\n",
     "   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "1d1adf3e-cf8a-4366-ab2e-4d01d47b7ca9",
    "metadata": {},
    "outputs": [],
@@ -170,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "96f3f864-4b3a-4abd-a1a0-7a4b5b92b66e",
    "metadata": {},
    "outputs": [],
@@ -266,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "25c4afca-9d8a-4e70-be56-e318e5121cfd",
    "metadata": {},
    "outputs": [],
@@ -304,8 +306,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "2883205b-5c0a-41ab-982a-c6aa86fdb4c3",
+   "execution_count": 7,
+   "id": "7d71203a-b7c3-4b56-8eaf-2a8ecc5f3976",
    "metadata": {},
    "outputs": [
     {
@@ -319,65 +321,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing train: 100%|██████████| 112/112 [20:17<00:00, 10.87s/it]\n",
-      "Processing valid: 100%|██████████| 32/32 [06:53<00:00, 12.92s/it]\n"
+      "Processing train:  32%|███▏      | 36/112 [08:19<17:34, 13.88s/it]\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Working on real\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing train: 100%|██████████| 49/49 [11:03<00:00, 13.54s/it]\n",
-      "Processing valid: 100%|██████████| 14/14 [02:51<00:00, 12.22s/it]\n"
-     ]
-    }
-   ],
-   "source": [
-    "for cat in CATEGORIES:\n",
-    "    process_images(cat, (32,32))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "1d8943c0-8005-4ba0-bb06-abd2b059ae8c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Working on fake\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing train: 100%|██████████| 112/112 [20:14<00:00, 10.84s/it]\n",
-      "Processing valid: 100%|██████████| 32/32 [06:11<00:00, 11.62s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Working on real\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing train: 100%|██████████| 49/49 [09:47<00:00, 11.99s/it]\n",
-      "Processing valid: 100%|██████████| 14/14 [02:38<00:00, 11.35s/it]\n"
+     "ename": "OSError",
+     "evalue": "[Errno 28] No space left on device",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m cat \u001b[38;5;129;01min\u001b[39;00m CATEGORIES:\n\u001b[1;32m----> 2\u001b[0m     \u001b[43mprocess_images\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcat\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m64\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m64\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[3], line 19\u001b[0m, in \u001b[0;36mprocess_images\u001b[1;34m(label, size)\u001b[0m\n\u001b[0;32m     16\u001b[0m val_paths \u001b[38;5;241m=\u001b[39m image_paths[train_split_index:val_split_index]\n\u001b[0;32m     17\u001b[0m test_paths \u001b[38;5;241m=\u001b[39m image_paths[val_split_index:]\n\u001b[1;32m---> 19\u001b[0m \u001b[43mcreate_images\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain_paths\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtrain\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msize\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlabel\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     21\u001b[0m create_images(val_paths, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalid\u001b[39m\u001b[38;5;124m\"\u001b[39m, size, label)\n",
+      "Cell \u001b[1;32mIn[5], line 54\u001b[0m, in \u001b[0;36mcreate_images\u001b[1;34m(images, category, size, label)\u001b[0m\n\u001b[0;32m     49\u001b[0m resized_img \u001b[38;5;241m=\u001b[39m save_transform(resized_img)\n\u001b[0;32m     52\u001b[0m resized_img_path\u001b[38;5;241m=\u001b[39mos\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(rgb_path, resized_img_name)\n\u001b[1;32m---> 54\u001b[0m \u001b[43mresized_img\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msave\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresized_img_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     58\u001b[0m image_counter \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     60\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (category\u001b[38;5;241m==\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtrain\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n",
+      "File \u001b[1;32m~\\anaconda3\\envs\\ADL\\lib\\site-packages\\PIL\\Image.py:2320\u001b[0m, in \u001b[0;36mImage.save\u001b[1;34m(self, fp, format, **params)\u001b[0m\n\u001b[0;32m   2317\u001b[0m         fp \u001b[38;5;241m=\u001b[39m builtins\u001b[38;5;241m.\u001b[39mopen(filename, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mw+b\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m   2319\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m-> 2320\u001b[0m     \u001b[43msave_handler\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfp\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   2321\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[0;32m   2322\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m open_fp:\n",
+      "File \u001b[1;32m~\\anaconda3\\envs\\ADL\\lib\\site-packages\\PIL\\JpegImagePlugin.py:783\u001b[0m, in \u001b[0;36m_save\u001b[1;34m(im, fp, filename)\u001b[0m\n\u001b[0;32m    779\u001b[0m \u001b[38;5;66;03m# The EXIF info needs to be written as one block, + APP1, + one spare byte.\u001b[39;00m\n\u001b[0;32m    780\u001b[0m \u001b[38;5;66;03m# Ensure that our buffer is big enough. Same with the icc_profile block.\u001b[39;00m\n\u001b[0;32m    781\u001b[0m bufsize \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmax\u001b[39m(ImageFile\u001b[38;5;241m.\u001b[39mMAXBLOCK, bufsize, \u001b[38;5;28mlen\u001b[39m(exif) \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m5\u001b[39m, \u001b[38;5;28mlen\u001b[39m(extra) \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m--> 783\u001b[0m \u001b[43mImageFile\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_save\u001b[49m\u001b[43m(\u001b[49m\u001b[43mim\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfp\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mjpeg\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mim\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msize\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrawmode\u001b[49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbufsize\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m~\\anaconda3\\envs\\ADL\\lib\\site-packages\\PIL\\ImageFile.py:524\u001b[0m, in \u001b[0;36m_save\u001b[1;34m(im, fp, tile, bufsize)\u001b[0m\n\u001b[0;32m    521\u001b[0m                 \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m    522\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    523\u001b[0m         \u001b[38;5;66;03m# slight speedup: compress to real file object\u001b[39;00m\n\u001b[1;32m--> 524\u001b[0m         s \u001b[38;5;241m=\u001b[39m \u001b[43mencoder\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mencode_to_file\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfh\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbufsize\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    525\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m s \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m    526\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mOSError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mencoder error \u001b[39m\u001b[38;5;132;01m{\u001b[39;00ms\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m when writing image file\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mexc\u001b[39;00m\n",
+      "\u001b[1;31mOSError\u001b[0m: [Errno 28] No space left on device"
      ]
     }
    ],
@@ -388,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "ae2456a3-a77c-4f89-a7b1-c0e6e25509c3",
    "metadata": {},
    "outputs": [
@@ -403,8 +363,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing train: 100%|██████████| 112/112 [25:41<00:00, 13.76s/it]\n",
-      "Processing valid: 100%|██████████| 32/32 [07:26<00:00, 13.94s/it]\n"
+      "Processing train: 100%|██████████| 112/112 [21:04<00:00, 11.29s/it]\n",
+      "Processing valid: 100%|██████████| 32/32 [06:08<00:00, 11.52s/it]\n"
      ]
     },
     {
@@ -418,8 +378,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing train: 100%|██████████| 49/49 [12:39<00:00, 15.49s/it]\n",
-      "Processing valid: 100%|██████████| 14/14 [03:34<00:00, 15.30s/it]\n"
+      "Processing train: 100%|██████████| 49/49 [09:40<00:00, 11.84s/it]\n",
+      "Processing valid: 100%|██████████| 14/14 [02:34<00:00, 11.05s/it]\n"
      ]
     }
    ],
@@ -430,8 +390,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "281ee5fd-12db-4ed4-a90b-6de3fcaf9bba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Working on fake\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing train: 100%|██████████| 112/112 [33:17<00:00, 17.84s/it]\n",
+      "Processing valid: 100%|██████████| 32/32 [09:19<00:00, 17.47s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Working on real\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing train: 100%|██████████| 49/49 [15:29<00:00, 18.96s/it]\n",
+      "Processing valid: 100%|██████████| 14/14 [04:08<00:00, 17.73s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for cat in CATEGORIES:\n",
+    "    process_images(cat, (256,256))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62d592be-3816-4e81-a229-e3b6cf7517c5",
    "metadata": {},
    "outputs": [],
    "source": []
