read the doc config

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -195,7 +195,9 @@
       "Epoch 1/20, Loss: 1.1753672527970735\n",
       "Epoch 2/20, Loss: 0.6025866880920363\n",
       "Epoch 3/20, Loss: 0.5447155918393817\n",
-      "Batches: 43\r"
+      "Epoch 4/20, Loss: 0.46101849327176253\n",
+      "Epoch 5/20, Loss: 0.36976973869785756\n",
+      "Epoch 6/20, Loss: 0.2761201551241904\n"
      ]
     }
    ],
