--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -197,7 +197,11 @@
       "Epoch 3/20, Loss: 0.5447155918393817\n",
       "Epoch 4/20, Loss: 0.46101849327176253\n",
       "Epoch 5/20, Loss: 0.36976973869785756\n",
-      "Epoch 6/20, Loss: 0.2761201551241904\n"
+      "Epoch 6/20, Loss: 0.2761201551241904\n",
+      "Epoch 7/20, Loss: 0.2162919287911113\n",
+      "Epoch 8/20, Loss: 0.16006820884920794\n",
+      "Epoch 9/20, Loss: 0.12146590437207903\n",
+      "Batches: 101\r"
      ]
     }
    ],
