--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -201,7 +201,8 @@
       "Epoch 7/20, Loss: 0.2162919287911113\n",
       "Epoch 8/20, Loss: 0.16006820884920794\n",
       "Epoch 9/20, Loss: 0.12146590437207903\n",
-      "Batches: 101\r"
+      "Epoch 10/20, Loss: 0.09607401673005235\n",
+      "Batches: 95\r"
      ]
     }
    ],
