--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -202,7 +202,8 @@
       "Epoch 8/20, Loss: 0.16006820884920794\n",
       "Epoch 9/20, Loss: 0.12146590437207903\n",
       "Epoch 10/20, Loss: 0.09607401673005235\n",
-      "Batches: 95\r"
+      "Epoch 11/20, Loss: 0.07584814220574332\n",
+      "Batches: 81\r"
      ]
     }
    ],
