--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -203,7 +203,10 @@
       "Epoch 9/20, Loss: 0.12146590437207903\n",
       "Epoch 10/20, Loss: 0.09607401673005235\n",
       "Epoch 11/20, Loss: 0.07584814220574332\n",
-      "Batches: 81\r"
+      "Epoch 12/20, Loss: 0.06036167557102553\n",
+      "Epoch 13/20, Loss: 0.04956029160006076\n",
+      "Epoch 14/20, Loss: 0.04129925461034782\n",
+      "Batches: 49\r"
      ]
     }
    ],
