--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -206,7 +206,9 @@
       "Epoch 12/20, Loss: 0.06036167557102553\n",
       "Epoch 13/20, Loss: 0.04956029160006076\n",
       "Epoch 14/20, Loss: 0.04129925461034782\n",
-      "Batches: 49\r"
+      "Epoch 15/20, Loss: 0.035872503172212876\n",
+      "Epoch 16/20, Loss: 0.03321911282374622\n",
+      "Batches: 29\r"
      ]
     }
    ],
