--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f9b56644-fdfe-4608-a0cf-c468db7310ee",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,10 @@
       "Epoch 14/20, Loss: 0.04129925461034782\n",
       "Epoch 15/20, Loss: 0.035872503172212876\n",
       "Epoch 16/20, Loss: 0.03321911282374622\n",
-      "Batches: 29\r"
+      "Epoch 17/20, Loss: 0.02255662088137791\n",
+      "Epoch 18/20, Loss: 0.024761361810407653\n",
+      "Epoch 19/20, Loss: 0.02673747133093406\n",
+      "Epoch 20/20, Loss: 0.01652910099335894\n"
      ]
     }
    ],
@@ -218,10 +221,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "6ccc12db-928c-4629-bb64-0a9b6c572819",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 95.02173913043478%\n"
+     ]
+    }
+   ],
    "source": [
     "results=model.predict(valid_loader)"
    ]
