new environment.yaml

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "93ef624d-fc84-4a53-9e6d-291f68c2b9df",
    "metadata": {},
    "outputs": [
@@ -24,7 +24,9 @@
    ],
    "source": [
     "import os\n",
+    "import pandas as pd\n",
     "import torch\n",
+    "import numpy as np\n",
     "from Preprocess import Process\n",
     "from NeuralNetworkDIY import ClassifierNetwork, Model\n",
     "from torch.utils.data import DataLoader, Dataset\n",
@@ -44,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "ba70bb57-9fca-49dc-a9a5-482a7dfd5820",
    "metadata": {},
    "outputs": [],
@@ -239,8 +241,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "1b97f82b-7049-44c5-acf1-f704baad9493",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def confusion_matrix(results):\n",
+    "    df = pd.DataFrame(results).transpose()\n",
+    "    length=len(df)\n",
+    "    df_agg = df.groupby(0)[1].agg(\n",
+    "        _0=lambda x: (x == 0).sum(),\n",
+    "        _1=lambda x: (x == 1).sum()\n",
+    "    ).reset_index()\n",
+    "\n",
+    "    true_positives = df_agg[df_agg[0] == 1]['_1'].sum()  # True Positive\n",
+    "    true_negatives = df_agg[df_agg[0] == 0]['_0'].sum()  # True Negative\n",
+    "    false_positives = df_agg[df_agg[0] == 0]['_1'].sum()  # False Positive\n",
+    "    false_negatives = df_agg[df_agg[0] == 1]['_0'].sum()  # False Negative\n",
+    "\n",
+    "    matrix = pd.DataFrame({\n",
+    "        'True 0': [true_negatives, false_positives],\n",
+    "        'True 1': [false_negatives, true_positives]\n",
+    "    }, index=['Pred 0', 'Pred 1'])\n",
+    "    \n",
+    "    accuracy = (true_positives + true_negatives) / (true_positives + true_negatives + false_positives + false_negatives)\n",
+    "    \n",
+    "    return matrix, accuracy\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "6e4cb093-9b1b-4cb9-a751-782b78e37d3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matrix, accuracy = confusion_matrix(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "0d521515-d469-4f0a-8778-3f7fa50e47ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>True 0</th>\n",
+       "      <th>True 1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Pred 0</th>\n",
+       "      <td>18076</td>\n",
+       "      <td>511</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pred 1</th>\n",
+       "      <td>2924</td>\n",
+       "      <td>47489</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        True 0  True 1\n",
+       "Pred 0   18076     511\n",
+       "Pred 1    2924   47489"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "192c4602-6f6f-4f9a-88d7-eba163f66a4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.9502\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Accuracy: {accuracy:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00bbca1a-45ec-4ab3-aea1-c604f1b3442e",
    "metadata": {},
    "outputs": [],
    "source": []
