--- a/Notebook-Showcase.ipynb
+++ b/Notebook-Showcase.ipynb
@@ -10,8 +10,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
+   "id": "d09db337-74e0-4656-af9a-6572d63b9995",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting opencv-python\n",
+      "  Using cached opencv_python-4.11.0.86-cp37-abi3-win_amd64.whl.metadata (20 kB)\n",
+      "Requirement already satisfied: numpy>=1.21.2 in c:\\users\\annal\\anaconda3\\envs\\jupyterlab\\lib\\site-packages (from opencv-python) (2.2.1)\n",
+      "Using cached opencv_python-4.11.0.86-cp37-abi3-win_amd64.whl (39.5 MB)\n",
+      "Installing collected packages: opencv-python\n",
+      "Successfully installed opencv-python-4.11.0.86\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install opencv-python\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "93ef624d-fc84-4a53-9e6d-291f68c2b9df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "import torch\n",
+    "import numpy as np\n",
+    "from Preprocess import Process\n",
+    "from NeuralNetworkDIY import ClassifierNetwork, Model\n",
+    "from torch.utils.data import DataLoader, Dataset\n",
+    "from torchvision import datasets, transforms\n",
+    "from PIL import Image\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "86229287-fe04-47b7-84be-70862133e1f9",
    "metadata": {},
    "outputs": [
     {
@@ -23,16 +65,6 @@
     }
    ],
    "source": [
-    "import os\n",
-    "import pandas as pd\n",
-    "import torch\n",
-    "import numpy as np\n",
-    "from Preprocess import Process\n",
-    "from NeuralNetworkDIY import ClassifierNetwork, Model\n",
-    "from torch.utils.data import DataLoader, Dataset\n",
-    "from torchvision import datasets, transforms\n",
-    "from PIL import Image\n",
-    "\n",
     "print(torch.cuda.is_available())"
    ]
   },
@@ -46,12 +78,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "ba70bb57-9fca-49dc-a9a5-482a7dfd5820",
    "metadata": {},
    "outputs": [],
    "source": [
-    "RAW_DIR = \"data/raw/140k face\"\n",
+    "RAW_DIR = r\"C:\\Users\\annal\\ADL\\archive\\real-vs-fake\"\n",
+    "\n",
     "PROCESSED_DIR = \"data/processed\"\n",
     "IMAGE_SIZE=(128,128)"
    ]
@@ -66,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "1aa1a1c1-e505-468e-be4e-e19c9d0e3962",
    "metadata": {},
    "outputs": [
@@ -81,23 +114,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing train: 100%|██████████| 112/112 [22:14<00:00, 11.92s/it]\n",
-      "Processing valid: 100%|██████████| 48/48 [10:42<00:00, 13.39s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Working on real\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing train: 100%|██████████| 49/49 [09:11<00:00, 11.26s/it]\n",
-      "Processing valid: 100%|██████████| 21/21 [03:49<00:00, 10.92s/it]\n"
+      "Processing train:   0%|          | 0/112 [00:07<?, ?it/s]\n",
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
      ]
     }
    ],
@@ -116,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "21abdd73-fc67-4085-88c6-698059ea38a1",
    "metadata": {},
    "outputs": [],
@@ -144,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "2db67dc5-5aec-4e72-99ae-572fcf680ba1",
    "metadata": {},
    "outputs": [],
@@ -166,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "9286121d-f4ff-4c8f-a121-85026df1fa60",
    "metadata": {},
    "outputs": [],
@@ -176,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "45fed2e7-7404-4a3b-8629-6083842e3188",
    "metadata": {},
    "outputs": [],
@@ -186,55 +206,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "f9b56644-fdfe-4608-a0cf-c468db7310ee",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/20, Loss: 1.1753672527970735\n",
-      "Epoch 2/20, Loss: 0.6025866880920363\n",
-      "Epoch 3/20, Loss: 0.5447155918393817\n",
-      "Epoch 4/20, Loss: 0.46101849327176253\n",
-      "Epoch 5/20, Loss: 0.36976973869785756\n",
-      "Epoch 6/20, Loss: 0.2761201551241904\n",
-      "Epoch 7/20, Loss: 0.2162919287911113\n",
-      "Epoch 8/20, Loss: 0.16006820884920794\n",
-      "Epoch 9/20, Loss: 0.12146590437207903\n",
-      "Epoch 10/20, Loss: 0.09607401673005235\n",
-      "Epoch 11/20, Loss: 0.07584814220574332\n",
-      "Epoch 12/20, Loss: 0.06036167557102553\n",
-      "Epoch 13/20, Loss: 0.04956029160006076\n",
-      "Epoch 14/20, Loss: 0.04129925461034782\n",
-      "Epoch 15/20, Loss: 0.035872503172212876\n",
-      "Epoch 16/20, Loss: 0.03321911282374622\n",
-      "Epoch 17/20, Loss: 0.02255662088137791\n",
-      "Epoch 18/20, Loss: 0.024761361810407653\n",
-      "Epoch 19/20, Loss: 0.02673747133093406\n",
-      "Epoch 20/20, Loss: 0.01652910099335894\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.train(train_loader)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "6ccc12db-928c-4629-bb64-0a9b6c572819",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test Accuracy: 95.02173913043478%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "results=model.predict(valid_loader)"
    ]
@@ -369,9 +354,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python ADL with GPU",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "adl"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -383,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
