--- a/UI-Prep.ipynb
+++ b/UI-Prep.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "93ef624d-fc84-4a53-9e6d-291f68c2b9df",
    "metadata": {},
    "outputs": [],
@@ -28,10 +28,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "86229287-fe04-47b7-84be-70862133e1f9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "print(torch.cuda.is_available())"
    ]
@@ -46,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ba70bb57-9fca-49dc-a9a5-482a7dfd5820",
    "metadata": {},
    "outputs": [],
@@ -66,10 +74,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "1aa1a1c1-e505-468e-be4e-e19c9d0e3962",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "PermissionError",
+     "evalue": "[WinError 5] A hozzáférés megtagadva: 'data/processed\\\\128\\\\train\\\\rgb'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mPermissionError\u001b[0m                           Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m process\u001b[38;5;241m=\u001b[39mProcess(RAW_DIR, PROCESSED_DIR, IMAGE_SIZE, delete_process_dir\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, batch_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1000\u001b[39m, aug_amount\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m      2\u001b[0m process\u001b[38;5;241m.\u001b[39mrun(\u001b[38;5;241m0.9\u001b[39m, \u001b[38;5;241m0.1\u001b[39m, \u001b[38;5;241m0\u001b[39m)\n",
+      "File \u001b[1;32m~\\OneDrive\\Dokumentumok\\GitHub\\ADL-AI-Generated-Image-Detection\\Preprocess.py:37\u001b[0m, in \u001b[0;36mProcess.__init__\u001b[1;34m(self, raw_dir, process_dir, image_size, delete_process_dir, batch_size, aug_amount)\u001b[0m\n\u001b[0;32m     35\u001b[0m \u001b[38;5;66;03m# Deleting the original processed_dir to make the new dataset\u001b[39;00m\n\u001b[0;32m     36\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m delete_process_dir \u001b[38;5;129;01mand\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexists(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mPROCESSED_DIR):\n\u001b[1;32m---> 37\u001b[0m     shutil\u001b[38;5;241m.\u001b[39mrmtree(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mPROCESSED_DIR)\n\u001b[0;32m     39\u001b[0m \u001b[38;5;66;03m# Defining transformations for the images\u001b[39;00m\n\u001b[0;32m     40\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mresize_transform \u001b[38;5;241m=\u001b[39m transforms\u001b[38;5;241m.\u001b[39mCompose([\n\u001b[0;32m     41\u001b[0m     transforms\u001b[38;5;241m.\u001b[39mResize(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mIMAGE_SIZE),\n\u001b[0;32m     42\u001b[0m     transforms\u001b[38;5;241m.\u001b[39mToTensor(),\n\u001b[0;32m     43\u001b[0m ])\n",
+      "File \u001b[1;32m~\\anaconda3\\envs\\jupyterlab\\Lib\\shutil.py:781\u001b[0m, in \u001b[0;36mrmtree\u001b[1;34m(path, ignore_errors, onerror, onexc, dir_fd)\u001b[0m\n\u001b[0;32m    779\u001b[0m     \u001b[38;5;66;03m# can't continue even if onexc hook returns\u001b[39;00m\n\u001b[0;32m    780\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[1;32m--> 781\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m _rmtree_unsafe(path, onexc)\n",
+      "File \u001b[1;32m~\\anaconda3\\envs\\jupyterlab\\Lib\\shutil.py:629\u001b[0m, in \u001b[0;36m_rmtree_unsafe\u001b[1;34m(path, onexc)\u001b[0m\n\u001b[0;32m    627\u001b[0m         os\u001b[38;5;241m.\u001b[39mrmdir(fullname)\n\u001b[0;32m    628\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mOSError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[1;32m--> 629\u001b[0m         onexc(os\u001b[38;5;241m.\u001b[39mrmdir, fullname, err)\n\u001b[0;32m    630\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m filenames:\n\u001b[0;32m    631\u001b[0m     fullname \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(dirpath, name)\n",
+      "File \u001b[1;32m~\\anaconda3\\envs\\jupyterlab\\Lib\\shutil.py:627\u001b[0m, in \u001b[0;36m_rmtree_unsafe\u001b[1;34m(path, onexc)\u001b[0m\n\u001b[0;32m    625\u001b[0m fullname \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(dirpath, name)\n\u001b[0;32m    626\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 627\u001b[0m     os\u001b[38;5;241m.\u001b[39mrmdir(fullname)\n\u001b[0;32m    628\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mOSError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[0;32m    629\u001b[0m     onexc(os\u001b[38;5;241m.\u001b[39mrmdir, fullname, err)\n",
+      "\u001b[1;31mPermissionError\u001b[0m: [WinError 5] A hozzáférés megtagadva: 'data/processed\\\\128\\\\train\\\\rgb'"
+     ]
+    }
+   ],
    "source": [
     "process=Process(RAW_DIR, PROCESSED_DIR, IMAGE_SIZE, delete_process_dir=True, batch_size=1000, aug_amount=0)\n",
     "process.run(0.9, 0.1, 0)"
